examples/test/testpolicy7612.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7612
  namespace: namespace165
spec:
  podSelector:
    matchLabels:
      key42: value44
      key46: value4
      key36: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value12
          key10: value35
          key41: value30
      podSelector:
        matchLabels:
          key3: value47
          key36: value5
          key37: value38
